--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -9,6 +9,7 @@
 <body>
     <nav>
         <ul>
+            <li><a href="a.html"></a></li>
             <li><a href="b.html">B画面</a></li>
         </ul>
     </nav>
